# cellule_Strategique

./: README.md  app.py  pdf_export.py  pipeline.py  piplineFinal.ipynb  pyproject.toml  requirements.txt  veille_history.db
.tmp/: Projet 2_SMA.txt  rapport_projet.tex  texte a dire.txt
chroma_external/: chroma.sqlite3
chroma_internal/: chroma.sqlite3
reports/: report_20260521_0308.md
