[project]
name = "cellule-sma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "chromadb>=1.5.9",
    "ddgs>=9.14.2",
    "duckduckgo-search>=8.1.1",
    "faker>=40.15.0",
    "feedparser>=6.0.12",
    "fpdf2>=2.8.7",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "markdown2>=2.5.5",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "tenacity>=9.1.4",
    "torchvision>=0.27.0",
]
